--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ body {
     background-color: #112b5c;
     color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
     padding-bottom: 20px;
-    margin-bottom: 40px;
 }
 
 /* Title and Description Container */
@@ -59,8 +59,7 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 15px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+    margin-top: 10px;
 }
 
 button {
@@ -158,7 +157,7 @@ button:hover {
     }
 
     .logo {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
     }
 }
